# XLSTM-anomaly-detector

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: ecg5000.yaml  forda.yaml  wafer.yaml
notebooks/: ECG5000.ipynb  FordA.ipynb  Wafer.ipynb
scripts/: download_data.py  run_ecg5000.py  run_forda.py  run_wafer.py
src/anomdet/: __init__.py  data.py  evaluate.py  explain.py  model.py  train.py
tests/: test_data.py  test_evaluate.py  test_model.py
