[project]
name = "ecg-anomaly-xlstm"
version = "0.1.0"
description = "Time-series anomaly detection with mLSTM autoencoders"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aeon>=1.4.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pyyaml>=6.0",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.17.1",
    "shap>=0.52.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "xlstm>=2.0.5",
    "wfdb>=4.3.1",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9", "mypy>=1.13", "types-PyYAML>=6.0"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anomdet"]
